2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: Removing extra gtk_main_iteration () processing
	from destroy_ callback as it introduces problems in async dbus signal
	handlers. Fixes NB#66673.

2007-08-24  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/hildon-hvolumebar-example.c:
	* src/hildon-volumebar.c: Improving the focus handling in the
	volumebar widgets. Fixes NB#63955 and NB#65155. Also fixing the
	set_property accessor so that "mute" property can be actually set. I'm
	scared that nobody noticed it's totally broken.

2007-08-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/control: Use libesd0-dev or osso-esd-dev as esd dependancy.
	Fixes NB#66548.

2007-08-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar.c:
	* src/hildon-number-editor.c:
	* src/hildon-time-picker.c: Changing the timeout repeat so that it
	matches the spec of 6 chars per second. Fixes: NB#60489.

2007-08-22  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-helper.c: Really fixing NB#58352. Looks like
	gtk_style_lookup_color sometime returns FALSE even though color was
	found and values were filled properly. Weird. Removing the warning for the
	time being.

2007-08-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-find-toolbar.c: Puting the combobox inside alignment to not
	expand vertically. Adding some extra space to the find toolbar buttons to
	make them thumbable. Fixes NB#66060.

2007-08-21  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar-popup.c: Replacing the "Done" button in the calendar
	popup with "Ok" and "Cancel". Fixes NB#59299.

2007-08-20  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar.c: Process all window updates before executing next
	timeout. Fixes: NB#54146.
